// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas unitarias en el componente <GifExpertApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The Simpsons"
      key="The Simpsons"
    />
    <GifGrid
      category="Heidi"
      key="Heidi"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas unitarias en el componente <GifExpertApp /> Debe renderizar correctamente el componente 1`] = `
<Fragment>
  <h2>
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
